--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 blog/settings.ini
+blog/mysql.cnf
 media/imagenes/*
 
 # Flask stuff:
@@ -129,3 +130,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+.vscode
