--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,8 @@ db.sqlite3-journal
 blog/settings.ini
 blog/mysql.cnf
 media/imagenes/*
+entradas/migrations/*
+!entradas/migrations/__init__.py
 
 # Flask stuff:
 instance/
